--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="mdui-toolbar mdui-color-indigo">
             <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">menu</i></a>
             <a href="javascript:;" class="mdui-typo-headline">地铁计算器<sup>lite</sup></a>
-            <a href="javascript:;" class="mdui-typo-title">Beta</a>
+            <a href="javascript:;" class="mdui-typo-title">Alpha</a>
             <div class="mdui-toolbar-spacer"></div>
             <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">search</i></a>
             <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
