--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         $$('#open').on('click', function () {
             mdui.snackbar({
-                message: '地铁计算器web<br/>Ver 20H7<br/>&copy2020 BSOD<br/>感谢贴吧@说过话换个方法和@开心的wangxy的车体号表<br/>链接：https://tieba.baidu.com/p/6676405533?pid=132126393760&cid=#132126393760'
+                message: '地铁计算器web<br/>Ver 20H7<br/>&copy2020 BSOD<br/>使用“GNU GENERAL PUBLIC LICENSE”进行授权<br/>感谢贴吧@说过话换个方法和@开心的wangxy的车体号表<br/>https://tieba.baidu.com/p/6676405533?pid=132126393760&cid=#132126393760'
             });
         });
     </script>
