--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="mdui-appbar mdui-appbar-fixed mdui-appbar-scroll-hide">
         <div class="mdui-toolbar mdui-color-theme-200">
             <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white" mdui-drawer="{target: '#main-drawer', swipe: true}"><i class="mdui-icon material-icons">menu</i></span>
-            <a href="javascript:;" class="mdui-typo-headline">地铁计算器<sup>web</sup></a>
+            <a href="javascript:;" class="mdui-typo-headline">地铁计算器</a>
             <a href="javascript:;" class="mdui-typo-title" id="open">Preview - 20H7</a>
             <div class="mdui-toolbar-spacer"></div>
             <a href="javascript:;" class="mdui-btn mdui-btn-icon" mdui-dialog="{target: '#example-3'}"><i class="mdui-icon material-icons">book</i></a>
         </div>
     </div>
-
+    
     <script type="text/javascript">
         var $$ = mdui.JQ;
 
@@ -380,6 +380,136 @@
             '16:16032:160961<br/>',
             '16:16033:160971<br/>',
             '16:16033:160983<br/>',
+            '16:16033:160991<br/>',
+            '16:16034:161001<br/>',
+            '16:16034:161013<br/>',
+            '16:16034:161021<br/>',
+            '16:16035:161031<br/>',
+            '16:16035:161043<br/>',
+            '16:16035:161051<br/>',
+            '16:16036:161061<br/>',
+            '16:16036:161073<br/>',
+            '16:16036:161081<br/>',
+            '16:16037:161091<br/>',
+            '16:16037:161103<br/>',
+            '16:16037:161111<br/>',
+            '16:16038:161121<br/>',
+            '16:16038:161133<br/>',
+            '16:16038:161141<br/>',
+            '16:16039:161151<br/>',
+            '16:16039:161163<br/>',
+            '16:16039:161171<br/>',
+            '16:16040:161181<br/>',
+            '16:16040:161193<br/>',
+            '16:16040:161201<br/>',
+            '16:16041:161211<br/>',
+            '16:16041:161223<br/>',
+            '16:16041:161231<br/>',
+            '16:16042:161241<br/>',
+            '16:16042:161253<br/>',
+            '16:16042:161261<br/>',
+            '16:16043:161271<br/>',
+            '16:16043:161283<br/>',
+            '16:16043:161291<br/>',
+            '16:16044:161301<br/>',
+            '16:16044:161313<br/>',
+            '16:16044:161321<br/>',
+            '16:16045:161331<br/>',
+            '16:16045:161343<br/>',
+            '16:16045:161351<br/>',
+            '16:16046:161361<br/>',
+            '16:16046:161373<br/>',
+            '16:16046:161381<br/>',
+            //'16:16047:161391<br/>',
+            //'16:16047:161402<br/>',
+            //'16:16047:161413<br/>',
+            //'16:16047:161423<br/>',
+            //'16:16047:161432<br/>',
+            //'16:16047:161441<br/>',
+            //'16:16048:161451<br/>',
+            //'16:16048:161462<br/>',
+            //'16:16048:161473<br/>',
+            //'16:16048:161483<br/>',
+            //'16:16048:161492<br/>',
+            //'16:16048:161501<br/>',
+            //'16:16049:161511<br/>',
+            //'16:16049:161522<br/>',
+            //'16:16049:161533<br/>',
+            //'16:16049:161543<br/>',
+            //'16:16049:161552<br/>',
+            //'16:16049:161561<br/>',
+            //'16:16050:161571<br/>',
+            //'16:16050:161582<br/>',
+            //'16:16050:161593<br/>',
+            //'16:16050:161603<br/>',
+            //'16:16050:161612<br/>',
+            //'16:16050:161621<br/>',
+            //'16:16051:161631<br/>',
+            //'16:16051:161642<br/>',
+            //'16:16051:161653<br/>',
+            //'16:16051:161663<br/>',
+            //'16:16051:161672<br/>',
+            //'16:16051:161681<br/>',
+            //'16:16052:161691<br/>',
+            //'16:16052:161702<br/>',
+            //'16:16052:161713<br/>',
+            //'16:16052:161723<br/>',
+            //'16:16052:161732<br/>',
+            //'16:16052:161741<br/>',
+            //'16:16053:161751<br/>',
+            //'16:16053:161762<br/>',
+            //'16:16053:161773<br/>',
+            //'16:16053:161783<br/>',
+            //'16:16053:161792<br/>',
+            //'16:16053:161801<br/>',
+            //'16:16054:161811<br/>',
+            //'16:16054:161822<br/>',
+            //'16:16054:161833<br/>',
+            //'16:16054:161843<br/>',
+            //'16:16054:161852<br/>',
+            //'16:16054:161861<br/>',
+            //'16:16055:161871<br/>',
+            //'16:16055:161882<br/>',
+            //'16:16055:161893<br/>',
+            //'16:16055:161903<br/>',
+            //'16:16055:161912<br/>',
+            //'16:16055:161921<br/>',
+            //'16:16056:161931<br/>',
+            //'16:16056:161942<br/>',
+            //'16:16056:161953<br/>',
+            //'16:16056:161963<br/>',
+            //'16:16056:161972<br/>',
+            //'16:16056:161981<br/>',
+            //'16:16057:161991<br/>',
+            //'16:16057:162002<br/>',
+            //'16:16057:162013<br/>',
+            //'16:16057:162023<br/>',
+            //'16:16057:162032<br/>',
+            //'16:16057:162041<br/>',
+            //'16:16058:162051<br/>',
+            //'16:16058:162062<br/>',
+            //'16:16058:162073<br/>',
+            //'16:16058:162083<br/>',
+            //'16:16058:162092<br/>',
+            //'16:16058:162101<br/>',
+            //'16:16059:162111<br/>',
+            //'16:16059:162122<br/>',
+            //'16:16059:162133<br/>',
+            //'16:16059:162143<br/>',
+            //'16:16059:162152<br/>',
+            //'16:16059:162161<br/>',
+            //'16:16060:162171<br/>',
+            //'16:16060:162182<br/>',
+            //'16:16060:162193<br/>',
+            //'16:16060:162203<br/>',
+            //'16:16060:162212<br/>',
+            //'16:16060:162221<br/>',
+            //'16:16061:162231<br/>',
+            //'16:16061:162242<br/>',
+            //'16:16061:162253<br/>',
+            //'16:16061:162263<br/>',
+            //'16:16061:162272<br/>',
+            //'16:16061:162281<br/>',
         ];
         function findone() {
             mykey = document.getElementById("mykeyword").value;
@@ -393,8 +523,8 @@
     </script>
 
     <div class="mdui-dialog" id="example-3">
+        <div class="mdui-dialog-title">LICENSE</div>
         <div class="mdui-dialog-content">
-            <div class="mdui-dialog-title">LICENSE</div>
             GNU GENERAL PUBLIC LICENSE<br/>
             Version 2, June 1991<br/>
 
