--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>地铁计算器（web）</title>
 </head>
 
-<body class="mdui-appbar-with-toolbar  mdui-theme-primary-blue mdui-theme-accent-teal">
+<body class="mdui-appbar-with-toolbar  mdui-theme-primary-pink mdui-theme-accent-teal">
     <script type="text/javascript">
         window.onload=function detectOS(){
             var userAgent = navigator.userAgent;
@@ -48,7 +48,7 @@
         </script> 
 <div id="check">
     <div class="mdui-appbar mdui-appbar-fixed mdui-appbar-scroll-hide">
-        <div class="mdui-toolbar mdui-color-theme-200">
+        <div class="mdui-toolbar mdui-color-theme-100">
             <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white" mdui-drawer="{target: '#main-drawer', swipe: true}"><i class="mdui-icon material-icons">menu</i></span>
             <a href="javascript:;" class="mdui-typo-headline">地铁计算器</a>
             <a href="javascript:;" class="mdui-typo-title" id="open">Preview</a>
