--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>地铁计算器（web）</title>
 </head>
 
-<body class="mdui-appbar-with-toolbar  mdui-theme-primary-pink mdui-theme-accent-teal">
+<body class="mdui-appbar-with-toolbar  mdui-theme-primary-orange mdui-theme-accent-teal">
     <script type="text/javascript">
         window.onload=function detectOS(){
             var userAgent = navigator.userAgent;
@@ -48,7 +48,7 @@
         </script> 
 <div id="check">
     <div class="mdui-appbar mdui-appbar-fixed mdui-appbar-scroll-hide">
-        <div class="mdui-toolbar mdui-color-theme-100">
+        <div class="mdui-toolbar mdui-color-theme">
             <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white" mdui-drawer="{target: '#main-drawer', swipe: true}"><i class="mdui-icon material-icons">menu</i></span>
             <a href="javascript:;" class="mdui-typo-headline">地铁计算器</a>
             <a href="javascript:;" class="mdui-typo-title" id="open">Preview</a>
@@ -78,11 +78,8 @@
     </div>
     
     <div class="mdui-dialog" id="example-3">
-        <div class="mdui-dialog-title">LICENSE</div>
+        <div class="mdui-dialog-title">GNU GENERAL PUBLIC LICENSE<br/>Version 2, June 1991</div>
         <div class="mdui-dialog-content">
-            GNU GENERAL PUBLIC LICENSE<br/>
-            Version 2, June 1991<br/>
-
 Copyright (C) 1989, 1991 Free Software Foundation, Inc.,
 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 Everyone is permitted to copy and distribute verbatim copies
