--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white"
                     mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></span>
                 <a href="javascript:;" class="mdui-typo-headline">地铁计算器</a>
-                <a href="javascript:;" class="mdui-typo-title" id="open">Preview</a>
+                <a href="javascript:;" class="mdui-typo-title" id="open">20H7 Update20</a>
                 <div class="mdui-toolbar-spacer"></div>
             </div>
         </div>
@@ -64,8 +64,8 @@
         </ul>
     </div>
     <div class="mdui-dialog" id="log">
-        <div class="mdui-dialog-title">7.14</div>
-        <div class="mdui-dialog-content">1.新增12011~12030的支持<br/>2.去除系统限制</div>
+        <div class="mdui-dialog-title">20H7 Update20</div>
+        <div class="mdui-dialog-content"><ol><li>更新12031~12040</li></ol></div>
         <div class="mdui-dialog-actions">
         <button class="mdui-btn mdui-ripple" mdui-dialog-close>好</button>
         </div>
