--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white"
                     mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></span>
                 <a href="javascript:;" class="mdui-typo-headline">地铁计算器</a>
-                <a href="javascript:;" class="mdui-typo-title" id="open">20H7 Update20</a>
+                <a href="javascript:;" class="mdui-typo-title" id="open">Snapshot/20w30a</a>
                 <div class="mdui-toolbar-spacer"></div>
             </div>
         </div>
@@ -28,7 +28,7 @@
 
             $$('#open').on('click', function () {
                 mdui.snackbar({
-                    message: '地铁计算器web<br/>&copy2020 BSOD<br/>使用“GNU GENERAL PUBLIC LICENSE”进行授权<br/>感谢贴吧@说过话换个方法和@开心的wangxy的车体号表<br/>https://tieba.baidu.com/p/6676405533?pid=132126393760&cid=#132126393760'
+                    message: '地铁计算器web<br/>&copy2020 BSOD<br/>使用“GNU GENERAL PUBLIC LICENSE”进行授权<br/>感谢贴吧@说过话换个方法和@开心的wangxy的车体号表<br/>Snapshot/20w30a'
                 });
             });
         </script>
