--- a/index.html
+++ b/index.html
@@ -415,6 +415,21 @@
             <button class="mdui-btn mdui-ripple" mdui-dialog-close>好</button>
         </div>
 </div>
+        <script>
+if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function () {
+        navigator.serviceWorker.register('/sw.js', {scope: '/'})
+            .then(function (registration) {
+                // 注册成功
+                console.log('ServiceWorker registration successful');
+            })
+            .catch(function (err) {
+                // 注册失败:(
+                console.log('ServiceWorker registration failed');
+            });
+    });
+}
+</script>
 </body>
 
 </html>
