--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="//cdnjs.loli.net/ajax/libs/mdui/0.4.3/js/mdui.min.js"></script>
     <script src="line.js"></script>
     <title>地铁计算器（web）</title>
+    <link rel="manifest" href="./manifest.json">
 </head>
 
 <body class="mdui-appbar-with-toolbar  mdui-theme-primary-orange mdui-theme-accent-teal">
