--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white"
                     mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></span>
                 <a href="javascript:;" class="mdui-typo-headline">地铁计算器</a>
-                <a href="javascript:;" class="mdui-typo-title" id="open">Snapshot/20w30a</a>
+                <a href="javascript:;" class="mdui-typo-title" id="open">Discontinued version/20w30a</a>
                 <div class="mdui-toolbar-spacer"></div>
             </div>
         </div>
