--- a/dev/index.html
+++ b/dev/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="//cdnjs.loli.net/ajax/libs/mdui/0.4.3/css/mdui.min.css">
     <script src="//cdnjs.loli.net/ajax/libs/mdui/0.4.3/js/mdui.min.js"></script>
     <script src="line.js"></script>
-    <title>地铁计算器（web）</title>
+    <title>Beta|地铁猜车器</title>
 </head>
 
 <body class="mdui-appbar-with-toolbar  mdui-theme-primary-orange mdui-theme-accent-teal">
@@ -17,8 +17,8 @@
             <div class="mdui-toolbar mdui-color-theme">
                 <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white"
                     mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></span>
-                <a href="javascript:;" class="mdui-typo-headline">地铁计算器</a>
-                <a href="javascript:;" class="mdui-typo-title" id="open">Snapshot/20w30a</a>
+                <a href="javascript:;" class="mdui-typo-headline">地铁猜车器</a>
+                <a href="javascript:;" class="mdui-typo-title" id="open">Snapshot/A</a>
                 <div class="mdui-toolbar-spacer"></div>
             </div>
         </div>
@@ -28,7 +28,7 @@
 
             $$('#open').on('click', function () {
                 mdui.snackbar({
-                    message: '地铁计算器web<br/>&copy2020 BSOD<br/>使用“GNU GENERAL PUBLIC LICENSE”进行授权<br/>感谢贴吧@说过话换个方法和@开心的wangxy的车体号表<br/>Snapshot/20w30a'
+                    message: '地铁猜车器<br/>&copy2020 BSOD<br/>使用“GNU GENERAL PUBLIC LICENSE”进行授权<br/>感谢贴吧@说过话换个方法和@开心的wangxy的车体号表<br/>Snapshot/20w30a'
                 });
             });
         </script>
@@ -41,34 +41,18 @@
             <div class="mdui-valign">
                 <div class="mdui-spinner"></div>请不要把车厢号当成车体号
             </div>
-        </div>
-        <div class="mdui-dialog" id="video">
-            <div class="mdui-dialog-title">第三届中国国际进口博览会宣传片
-                <video class="mdui-video-fluid" controls>
-                    <source src="expo.mp4" type="video/mp4">
-                </video>
-            </div>
+    </div>
             <div class="mdui-dialog-actions">
                 <button class="mdui-btn mdui-ripple" mdui-dialog-close>好</button>
             </div>
         </div>
     </div>
-    <div id="w7"></div>
     <div class="mdui-drawer mdui-drawer-close mdui-color-white" id="left-drawer">
         <ul class="mdui-list">
             <li class="mdui-list-item mdui-ripple" mdui-dialog="{target: '#example-3'}"><i class="mdui-icon material-icons mdui-text-color-theme">book</i>用户协议</li>
-            <li class="mdui-list-item mdui-ripple" mdui-dialog="{target: '#log'}"><i class="mdui-icon material-icons mdui-text-color-theme">file_download</i>更新日志</li>
             <li class="mdui-list-item mdui-ripple"><a href="https://tieba.baidu.com/p/6794278611"><i class="mdui-icon material-icons mdui-text-color-theme">arrow_back</i>去原帖</a></li>
             <li class="mdui-list-item mdui-ripple" mdui-drawer-close><i class="mdui-icon material-icons mdui-text-color-theme">close</i>关闭</li>
-            <li class="mdui-list-item mdui-ripple" mdui-dialog="{target: '#video'}"><i class="mdui-icon material-icons mdui-text-color-theme">play_arrow</i>进口博览会宣传片</li>
         </ul>
-    </div>
-    <div class="mdui-dialog" id="log">
-        <div class="mdui-dialog-title">20H7 Update20</div>
-        <div class="mdui-dialog-content"><ol><li>更新12031~12040</li></ol></div>
-        <div class="mdui-dialog-actions">
-        <button class="mdui-btn mdui-ripple" mdui-dialog-close>好</button>
-        </div>
     </div>
     <div class="mdui-dialog" id="example-3">
         <div class="mdui-dialog-title">GNU GENERAL PUBLIC LICENSE<br />Version 2, June 1991</div>
