--- a/dev/index.html
+++ b/dev/index.html
@@ -12,9 +12,9 @@
     <title>Beta|地铁猜车器</title>
 </head>
 
-<body class="mdui-appbar-with-toolbar  mdui-theme-primary-blue-700 mdui-theme-accent-teal">
+<body class="mdui-appbar-with-toolbar  mdui-theme-primary-blue mdui-theme-accent-teal">
         <div class="mdui-appbar mdui-appbar-fixed mdui-appbar-scroll-hide">
-            <div class="mdui-toolbar mdui-color-theme">
+            <div class="mdui-toolbar mdui-color-theme-700">
                 <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white"
                     mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></span>
                 <a href="javascript:;" class="mdui-typo-headline">地铁猜车器</a>
@@ -49,9 +49,9 @@
     </div>
     <div class="mdui-drawer mdui-drawer-close mdui-color-white" id="left-drawer">
         <ul class="mdui-list">
-            <li class="mdui-list-item mdui-ripple" mdui-dialog="{target: '#example-3'}"><i class="mdui-icon material-icons mdui-text-color-theme">book</i>用户协议</li>
-            <li class="mdui-list-item mdui-ripple"><a href="https://tieba.baidu.com/p/6794278611"><i class="mdui-icon material-icons mdui-text-color-theme">arrow_back</i>去原帖</a></li>
-            <li class="mdui-list-item mdui-ripple" mdui-drawer-close><i class="mdui-icon material-icons mdui-text-color-theme">close</i>关闭</li>
+            <li class="mdui-list-item mdui-ripple" mdui-dialog="{target: '#example-3'}"><i class="mdui-icon material-icons mdui-text-color-theme-700">book</i>用户协议</li>
+            <li class="mdui-list-item mdui-ripple"><a href="https://tieba.baidu.com/p/6794278611"><i class="mdui-icon material-icons mdui-text-color-theme-700">arrow_back</i>去原帖</a></li>
+            <li class="mdui-list-item mdui-ripple" mdui-drawer-close><i class="mdui-icon material-icons mdui-text-color-theme-700">close</i>关闭</li>
         </ul>
     </div>
     <div class="mdui-dialog" id="example-3">
