--- a/dev/index.html
+++ b/dev/index.html
@@ -14,7 +14,7 @@
 
 <body class="mdui-appbar-with-toolbar  mdui-theme-primary-blue mdui-theme-accent-teal mdui-theme-layout-auto">
         <div class="mdui-appbar mdui-appbar-fixed mdui-appbar-scroll-hide">
-            <div class="mdui-toolbar mdui-color-theme">
+            <div class="mdui-toolbar mdui-color-theme-700">
                 <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white"
                     mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></span>
                 <a href="javascript:;" class="mdui-typo-headline">地铁猜车器</a>
