--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="mdui-spinner"></div>请不要把车厢号当成车体号
             </div>
         </div>
-<iframe height="1200" width="800" src="https://wj.qq.com/s2/6963299/692b/" frameborder="0" allowfullscreen></iframe>
+<center><iframe height="500" width="500" src="https://wj.qq.com/s2/6963299/692b/" frameborder="0" allowfullscreen></iframe></center>
         <div class="mdui-dialog" id="video">
             <div class="mdui-dialog-title">第三届中国国际进口博览会宣传片
                 <video class="mdui-video-fluid" controls>
