--- a/dev/index.html
+++ b/dev/index.html
@@ -9,17 +9,18 @@
     <link rel="stylesheet" href="//cdnjs.loli.net/ajax/libs/mdui/0.4.3/css/mdui.min.css">
     <script src="//cdnjs.loli.net/ajax/libs/mdui/0.4.3/js/mdui.min.js"></script>
     <script src="line.js"></script>
-    <title>Beta|地铁猜车器</title>
+    <title>地铁猜车器Development Preview</title>
 </head>
 
 <body class="mdui-appbar-with-toolbar  mdui-theme-primary-blue mdui-theme-accent-teal mdui-theme-layout-auto">
         <div class="mdui-appbar mdui-appbar-fixed mdui-appbar-scroll-hide">
-            <div class="mdui-toolbar mdui-color-theme-700">
+            <div class="mdui-toolbar mdui-color-theme-800">
                 <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white"
                     mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></span>
                 <a href="javascript:;" class="mdui-typo-headline">地铁猜车器</a>
-                <a href="javascript:;" class="mdui-typo-title" id="open">Snapshot/A</a>
+                <a href="javascript:;" class="mdui-typo-title" id="open">Development Preview/A</a>
                 <div class="mdui-toolbar-spacer"></div>
+                <a href="/" class="mdui-typo-title">回稳定版</a>
             </div>
         </div>
 
@@ -41,15 +42,22 @@
             <div class="mdui-valign">
                 <div class="mdui-spinner"></div>请不要把车厢号当成车体号
             </div>
-    </div>
         </div>
     </div>
     <div class="mdui-drawer mdui-drawer-close mdui-color-white" id="left-drawer">
         <ul class="mdui-list">
-            <li class="mdui-list-item mdui-ripple" mdui-dialog="{target: '#example-3'}"><i class="mdui-icon material-icons mdui-text-color-theme-700">book</i>用户协议</li>
-            <li class="mdui-list-item mdui-ripple"><a href="https://tieba.baidu.com/p/6794278611"><i class="mdui-icon material-icons mdui-text-color-theme-700">arrow_back</i>去原帖</a></li>
-            <li class="mdui-list-item mdui-ripple" mdui-drawer-close><i class="mdui-icon material-icons mdui-text-color-theme-700">close</i>关闭</li>
+            <li class="mdui-list-item mdui-ripple" mdui-dialog="{target: '#example-3'}"><i class="mdui-icon material-icons mdui-text-color-theme">book</i>用户协议</li>
+            <li class="mdui-list-item mdui-ripple" mdui-dialog="{target: '#log'}"><i class="mdui-icon material-icons mdui-text-color-theme">file_download</i>更新日志</li>
+            <li class="mdui-list-item mdui-ripple"><a href="https://tieba.baidu.com/p/6794278611"><i class="mdui-icon material-icons mdui-text-color-theme">arrow_back</i>去原帖</a></li>
+            <li class="mdui-list-item mdui-ripple" mdui-drawer-close><i class="mdui-icon material-icons mdui-text-color-theme">close</i>关闭</li>
         </ul>
+    </div>
+    <div class="mdui-dialog" id="log">
+        <div class="mdui-dialog-title">20H7 Update20</div>
+        <div class="mdui-dialog-content"><ol><li>更新12031~12040</li></ol></div>
+        <div class="mdui-dialog-actions">
+        <button class="mdui-btn mdui-ripple" mdui-dialog-close>好</button>
+        </div>
     </div>
     <div class="mdui-dialog" id="example-3">
         <div class="mdui-dialog-title">GNU GENERAL PUBLIC LICENSE<br />Version 2, June 1991</div>
