--- a/dev/index.html
+++ b/dev/index.html
@@ -49,20 +49,12 @@
             </div>
         </div>
     </div>
-    <div class="mdui-drawer mdui-drawer-close mdui-color-white" id="left-drawer">
+    <div class="mdui-drawer mdui-drawer-close" id="left-drawer">
         <ul class="mdui-list">
             <li class="mdui-list-item mdui-ripple" mdui-dialog="{target: '#example-3'}"><i class="mdui-icon material-icons mdui-text-color-theme">book</i>用户协议</li>
-            <li class="mdui-list-item mdui-ripple" mdui-dialog="{target: '#log'}"><i class="mdui-icon material-icons mdui-text-color-theme">file_download</i>更新日志</li>
             <li class="mdui-list-item mdui-ripple"><a href="https://tieba.baidu.com/p/6794278611"><i class="mdui-icon material-icons mdui-text-color-theme">arrow_back</i>去原帖</a></li>
             <li class="mdui-list-item mdui-ripple" mdui-drawer-close><i class="mdui-icon material-icons mdui-text-color-theme">close</i>关闭</li>
         </ul>
-    </div>
-    <div class="mdui-dialog" id="log">
-        <div class="mdui-dialog-title">20H7 Update20</div>
-        <div class="mdui-dialog-content"><ol><li>更新12031~12040</li></ol></div>
-        <div class="mdui-dialog-actions">
-        <button class="mdui-btn mdui-ripple" mdui-dialog-close>好</button>
-        </div>
     </div>
     <div class="mdui-dialog" id="example-3">
         <div class="mdui-dialog-title">GNU GENERAL PUBLIC LICENSE<br />Version 2, June 1991</div>
