--- a/dev/index.html
+++ b/dev/index.html
@@ -12,7 +12,11 @@
   integrity="sha384-2PJ2u4NYg6jCNNpv3i1hK9AoAqODy6CdiC+gYiL2DVx+ku5wzJMFNdE3RoWfBIRP"
   crossorigin="anonymous"
 />
-    <script src="//cdnjs.loli.net/ajax/libs/mdui/0.4.3/js/mdui.min.js"></script>
+<script
+src="https://cdn.jsdelivr.net/npm/mdui@1.0.0/dist/js/mdui.min.js"
+integrity="sha384-aB8rnkAu/GBsQ1q6dwTySnlrrbhqDwrDnpVHR2Wgm8pWLbwUnzDcIROX3VvCbaK+"
+crossorigin="anonymous"
+></script>
     <script src="line.js"></script>
     <title>地铁猜车器Development Preview</title>
 </head>
@@ -23,9 +27,9 @@
                 <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white"
                     mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></span>
                 <a href="javascript:;" class="mdui-typo-headline">地铁猜车器</a>
-                <a href="javascript:;" class="mdui-typo-title" id="open">Development Preview/A</a>
+                <a href="javascript:;" class="mdui-typo-title mdui-ripple" id="open">Development Preview/A</a>
                 <div class="mdui-toolbar-spacer"></div>
-                <a href="/" class="mdui-typo-title">回稳定版</a>
+                <a href="/" class="mdui-typo-title mdui-ripple">回稳定版</a>
             </div>
         </div>
 
@@ -49,6 +53,12 @@
             </div>
         </div>
     </div>
+    <div class="mdui-typo">
+        1号线进度：1.16%
+      </div>
+    <div class="mdui-progress">
+        <div class="mdui-progress-determinate" style="width: 1.16%;"></div>
+      </div>
     <div class="mdui-drawer mdui-drawer-close" id="left-drawer">
         <ul class="mdui-list">
             <li class="mdui-list-item mdui-ripple" mdui-dialog="{target: '#example-3'}"><i class="mdui-icon material-icons mdui-text-color-theme">book</i>用户协议</li>
