--- a/dev/index.html
+++ b/dev/index.html
@@ -18,7 +18,7 @@ integrity="sha384-aB8rnkAu/GBsQ1q6dwTySnlrrbhqDwrDnpVHR2Wgm8pWLbwUnzDcIROX3VvCba
 crossorigin="anonymous"
 ></script>
     <script src="line.js"></script>
-    <title>地铁猜车器Development Preview</title>
+    <title>地铁猜车器dev</title>
 </head>
 
 <body class="mdui-appbar-with-toolbar  mdui-theme-primary-blue mdui-theme-accent-teal mdui-theme-layout-auto">
@@ -27,7 +27,7 @@ crossorigin="anonymous"
                 <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white"
                     mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></span>
                 <a href="javascript:;" class="mdui-typo-headline">地铁猜车器</a>
-                <a href="javascript:;" class="mdui-typo-title mdui-ripple" id="open">Development Preview/A</a>
+                <a href="javascript:;" class="mdui-typo-title mdui-ripple" id="open">Under Construction/A</a>
                 <div class="mdui-toolbar-spacer"></div>
                 <a href="/" class="mdui-typo-title mdui-ripple">回稳定版</a>
             </div>
@@ -42,23 +42,23 @@ crossorigin="anonymous"
                 });
             });
         </script>
-        <div class="mdui-textfield mdui-textfield-floating-label">
-            <label class="mdui-textfield-label">输入车体号</label>
-            <input id="mykeyword" class="mdui-textfield-input" type="text" onkeyup="findone()" />
-        </div>
+        <center>
+        <div class="mdui-textfield mdui-textfield-expandable">
+            <button class="mdui-textfield-icon mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">search</i></button>
+            <input id="mykeyword" class="mdui-textfield-input" onkeyup="findone()" type="text" placeholder="输入车体号"/>
+            <button class="mdui-textfield-close mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">close</i></button>
+          </div>
+        </center>
 
         <div id=myfind>
             <div class="mdui-valign">
                 <div class="mdui-spinner"></div>请不要把车厢号当成车体号
             </div>
+            <div class="mdui-progress">
+                <div class="mdui-progress-determinate" style="width: 6.97%;"></div>
+              </div>
         </div>
     </div>
-    <div class="mdui-typo">
-        1号线进度：1.16%
-      </div>
-    <div class="mdui-progress">
-        <div class="mdui-progress-determinate" style="width: 1.16%;"></div>
-      </div>
     <div class="mdui-drawer mdui-drawer-close" id="left-drawer">
         <ul class="mdui-list">
             <li class="mdui-list-item mdui-ripple" mdui-dialog="{target: '#example-3'}"><i class="mdui-icon material-icons mdui-text-color-theme">book</i>用户协议</li>
