--- a/dev/bug.html
+++ b/dev/bug.html
@@ -21,16 +21,15 @@ crossorigin="anonymous"
     <title>地铁猜车器dev</title>
 </head>
 
-<body class="mdui-appbar-with-toolbar  mdui-theme-primary-blue mdui-theme-accent-teal mdui-theme-layout-auto">
+<body class="mdui-appbar-with-toolbar  mdui-theme-primary-white mdui-theme-accent-blue mdui-theme-layout-auto">
         <div class="mdui-appbar mdui-appbar-fixed mdui-appbar-scroll-hide">
             <div class="mdui-toolbar mdui-color-theme-800">
-                <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white"
-                    mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></span>
+                <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white" mdui-drawer="{target: '#left-drawer'}"><i class="mdui-icon material-icons">menu</i></span>
                 <a href="javascript:;" class="mdui-typo-headline">地铁猜车器</a>
                 <a href="javascript:;" class="mdui-typo-title mdui-ripple" id="open">Under Construction/A</a>
                 <div class="mdui-chip mdui-color-theme">
-                    <div class="mdui-textfield mdui-textfield-expandable">
-                        <button class="mdui-textfield-icon mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">search</i></button>
+                    <div class="mdui-textfield mdui-textfield-expandable mdui-hoverable">
+                        <button class="mdui-textfield-icon mdui-btn mdui-btn-icon" mdui-tooltip="{content: '搜索'}"><i class="mdui-icon material-icons">search</i></button>
                         <input id="mykeyword" class="mdui-textfield-input" onkeyup="findone()" type="text" placeholder="输入车体号"/>
                         <button class="mdui-textfield-close mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">close</i></button>
                     </div>
@@ -41,11 +40,11 @@ crossorigin="anonymous"
         </div>
 
         <script type="text/javascript">
-            var $$ = mdui.JQ;
+            var $$ = mdui.$;
 
             $$('#open').on('click', function () {
                 mdui.snackbar({
-                    message: '地铁猜车器<br/>&copy2020 BSOD<br/>使用“GNU GENERAL PUBLIC LICENSE”进行授权<br/>感谢贴吧@说过话换个方法和@开心的wangxy的车体号表<br/>Snapshot/20w30a'
+                    message: '地铁猜车器<br/>&copy2020 BSOD<br/>感谢贴吧@说过话换个方法和@开心的wangxy的车体号表'
                 });
             });
         </script>
@@ -58,13 +57,6 @@ crossorigin="anonymous"
                 <div class="mdui-progress-determinate" style="width: 6.97%;"></div>
               </div>
         </div>
-    </div>
-    <div class="mdui-drawer mdui-drawer-close" id="left-drawer">
-        <ul class="mdui-list">
-            <li class="mdui-list-item mdui-ripple" mdui-dialog="{target: '#example-3'}"><i class="mdui-icon material-icons mdui-text-color-theme">book</i>用户协议</li>
-            <li class="mdui-list-item mdui-ripple"><a href="https://tieba.baidu.com/p/6794278611"><i class="mdui-icon material-icons mdui-text-color-theme">arrow_back</i>去原帖</a></li>
-            <li class="mdui-list-item mdui-ripple" mdui-drawer-close><i class="mdui-icon material-icons mdui-text-color-theme">close</i>关闭</li>
-        </ul>
     </div>
     <div class="mdui-dialog" id="example-3">
         <div class="mdui-dialog-title">GNU GENERAL PUBLIC LICENSE<br />Version 2, June 1991</div>
@@ -411,6 +403,19 @@ crossorigin="anonymous"
             <button class="mdui-btn mdui-ripple" mdui-dialog-close>好</button>
         </div>
 </div>
+<div class="mdui-drawer mdui-drawer-close" id="left-drawer">
+    <div class="mdui-card">
+      <div class="mdui-card-media">
+        <img src="https://api.xygeng.cn/Bing/"/>
+        <div class="mdui-card-media-covered mdui-card-media-covered-transparent">
+          <div class="mdui-card-primary">
+            <div class="mdui-card-primary-title">戴好口罩！！！</div>
+            <div class="mdui-card-primary-subtitle">图片来自必应“每日一图”</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
